--- a/blog.html
+++ b/blog.html
@@ -308,6 +308,95 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>january . 23 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/eVlvYVu.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the last few days have been very comfortable, i am truly happy with the recent improvements <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm trying to understand and respect my feelings, cleaning my life of everything that bothers me, even if just a little bit.
+those annoying little things accumulate stress throughout the day, you know ?
+i usually have a hard time expressing my emotions and being honest, but this has been fixed and greatly improved the quality of my relationships !
+it's very important to believe in who you are and in the life you dream of living, to be able to improve consistently and not be negatively influenced by other people's ( not constructive ) opinions <sub><img src="https://i.imgur.com/k5MHWZA.gif"/></sub>
+i feel like i'm going the right way !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+well, i did some pretty cute things that i'll show you today..
+first, a small thing : i colored and edited a very cute drawing and the result made me proud !</pre><br>
+<br>
+
+<center><img width="420px" height="auto" src="https://i.imgur.com/bMMexej.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the colors look so soft <font color="#d3a5a5" style="font-size:11px;">♡</font>
+looking at it makes me motivated to bake, it's something i love to do and i want to practice more <sub><img src="https://i.imgur.com/Wdbzz2m.gif"/></sub>
+i have a notable difficulty in baking bread.. i'll try my best <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+i did something new for the poofties project ( i said i wanted to move forward on projects this year, remember ? )
+i wanted to write down some relevant information about the world of poofti, and as i had already imagined that the "observer" potato wrote down things that she discovered, i decided to make her notes become something real :</pre></font></font><br>
+<br>
+
+<center>
+<font color="#d1aeb9" style="font-size:10px;">( click the notebook for going to the next pages )</font>
+<br><br>
+<img width="430px" height="auto" src="https://i.imgur.com/OxelpoU.png"
+onclick="if(this.src=='https://i.imgur.com/OxelpoU.png'){
+this.src='https://i.imgur.com/6F75y59.png'; }
+else{ this.src='https://i.imgur.com/OxelpoU.png'; }"/>
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think this was a good idea and it came out very cute, don't you think ?
+i want to make more episodes of poofties, but it's something that takes a lot of time so you'll have to wait patiently ;;
+
+next is a very beautiful dress, which used to be very short and simple, and i completely renovated it and made it longer :</pre></font></font><br>
+<br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/8MpsWFr.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i feel like a princess when i wear this dress .. it's like magic !
+wearing something that changes my mood for the better is something i pay close attention to <sub><img src="https://i.imgur.com/uYMm6gZ.gif"/></sub>
+
+just like i said in the last post, i wanted to try to needle felt one more realistic little critter, and so i did :</pre></font></font><br>
+
+
+<center><img width="310px" height="auto" src="https://i.imgur.com/a8kEvEw.png"><br><br>
+<img width="290px" height="auto" src="https://i.imgur.com/cbj85BN.png"></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's a sleepy baby bunny <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+isn't it precious ? i'm in love.. it's very small & delicate
+i won't sell this one, i will to keep it to myself. i don't usually keep those little critters for myself, but this time i think i'm deserving of a little gift ..
+
+that's it for today, i hope you are enjoying the updates !
+dear reader, please take care and rest when necessary. never blame yourself for feeling tired <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
+<br>
+xoxo <sub><sub><img src="https://i.imgur.com/ifHAkah.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/zncXxx2.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -441,82 +530,6 @@ xoxo <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/eHfpR3b.
 <br>
 
 <center><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/></center>
-
-<br><br><br>
-
-<center><img width="330" height="auto" src="https://i.imgur.com/voTDmbX.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>november . 28 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><img src="https://i.imgur.com/i7huzO1.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-this month .. i worked a whole lot but i somehow managed to rest a lot more than i usually do
-i had some very energetic moments, extremely sleepy moments, talkative moments and completely quiet moments !!
-it was a mess and i'm tired, but at least i did things i'm very proud of that i want to show you today <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i hope my emotions will get together this new month so i can feel less anxious. when i'm all over the place like this i always get confused at some point, act out of myself, feel dissociated and get embarrassed <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-but everything is okay, after all, it's natural to have different moods and i'm always doing my best and learning from any mistakes ( even the smallest ones )
-i will make sure to be patient.. i have to put myself first if i want to be happy, being a caring person includes caring about my own well-being and validating my efforts !!
-i know that forcing myself to socialize is big part of my anxiety so i will keep cautious not to overdo it and stay in a safe place. i can and will make people smile within my capacity, fill my life with good experiences while respecting my limits. <sub><img src="https://i.imgur.com/1kNoTYw.gif"/></sub>
-also, a little reminder for me and anyone reading this : be yourself. self improvement is not about trying to fit in. it doesn't matter if someone would like you more if you acted like this or that, it doesn't matter if someone thinks you're weird, it doesn't matter. stay pure and be proud of who you are. don't try to get included, don't base your growth on what others see, it's not worth it.
-focusing on my improvement, creating content i feel truly proud of and decentralizing the attention of my ego is what i long for !! enough of pain for not being perfect for others, i will perfect myself.. for myself <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i love helping, i want to inspire and be inspired. i must keep myself pure if i want to heal. only a heart full of love can spread kindness !
-
-let's go for the content !! this month i made some really cute things, i'm excited to show you <font color="#d3a5a5" style="font-size:11px;">♡</font>
-first, my secret project from poofties, finally started :</pre><br>
-<br>
-
-<center><video width="410" height="251" controls>
-<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
-</video></center><br><br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-these will be a series of 1min videos with this *big* story i have in mind for.. some years now
-everything made with collages of real life things, except for the characters !!
-i think it looks really cute, it takes a long while to search, edit and put everything together but i had a lot of fun <sub><img src="https://i.imgur.com/KyUyLXO.gif"/></sub>
-the "voice acting" is absolutely amateur ( and a little embarrassing ) but i'm okay with this.. what can i do ? LOL
-please let me know your opinions, i'm not used to video editing and some things ( specially the audio ) can be a little off so i would really appreciate the opinion of someone more experienced
-
-all the melodies used will be composed by me ( i've already started with the next one actually )
-this is the one i've used in this episode :</pre><br>
-
-<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/xcbdd6.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a>　
-</center>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-a lively and adorable midi, i'm happy with it <sub><img src="https://i.imgur.com/JzNv9qo.gif"/></sub>
-not the most creative melody because i wanted these to be simple and not distracting, so expect to hear some loops !
-
-the next thing i'm showing today is a simple but lovely idea a friend gave me : collage wallpapers with self care reminders
-( i have these on my instagram highlights )</pre><br>
-<br>
-
-<center><img width="135px" height="auto" src="https://i.imgur.com/V1hKb0T.png"> <img width="135px" height="auto" src="https://i.imgur.com/qUi9ByM.png"> <img width="135px" height="auto" src="https://i.imgur.com/zXLN6tk.png"></center>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-as you already know, i love making collages, it's really relaxing for me so i will certainly make some more of these in the near future.. !
-it's always nice to practice making visuals with different aesthetics, right ?
-
-i hope you, lovely reader, is taking good care of yourself <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-the year is almost finished .. let's fill our hearts with hope for new experiences
-
-xoxo <sub><img src="https://i.imgur.com/amkCF1V.gif"/></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img width="330" height="auto" src="https://i.imgur.com/voTDmbX.png"/></center>
 
 <br><br><br>
 
