--- a/portfolio.html
+++ b/portfolio.html
@@ -331,6 +331,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
+<img width="300px" height="auto" src="https://i.imgur.com/bMMexej.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/w5BQZ4h.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/gInirWP.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/zqHB2w1.png"><br><br>
