--- a/blog.html
+++ b/blog.html
@@ -382,7 +382,7 @@ just like i said in the last post, i wanted to try to needle felt one more reali
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 it's a sleepy baby bunny <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
 isn't it precious ? i'm in love.. it's very small & delicate
-i won't sell this one, i will to keep it to myself. i don't usually keep those little critters for myself, but this time i think i'm deserving of a little gift ..
+i won't sell this one, i will keep it to myself. i don't usually keep those little critters for myself, but this time i think i'm deserving a little gift ..
 
 that's it for today, i hope you are enjoying the updates !
 dear reader, please take care and rest when necessary. never blame yourself for feeling tired <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
