--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -312,6 +312,32 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#aab0b7">
+<img src="https://i.imgur.com/i7IJQbR.png"><br><br>
+january . 30 . 2020<br>
+✄ flew
+</font>
+</center><font color="#bfc4c9">
+<br>
+　　　that flew<br>
+　　that one flew too<br>
+　and that other one too<br>
+<br>
+　　　decided : i will fly<br>
+　　　　　　　　　　　　　　　here i go !!!<br>
+　　　　　　　　　　but i fell ..<br>
+　　　　　　　　　　　　　　i try again !!<br>
+　　　　　　　　　　　　i fell again ..<br>
+　　　　i can't fly<br>
+　　　　it's okay<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+
+<div style="text-align:left">
 <center><font color="#b79e96">
 <img src="https://i.imgur.com/B0R9I5n.png"><br><br>
 january . 07 . 2020<br>
@@ -404,30 +430,6 @@ august . 08 . 2019<br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
 <br><br><br>
 
-<div style="text-align:left">
-<center><font color="#b79e96">
-<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
-june . 14 . 2019<br>
-✄ safe as a ghost
-</font>
-</center>
-<font color="#c9bcb1">
-<br><br>
-
-　　where i live, everyone i know has gone through bad and dangerous stuff in the streets.<br>
-　　i always wanted to have some ghost qualities to avoid being noticed by people, to avoid problems and dangers. people can be really scary.<br>
-　　invisible, inaudible. always doing all things carefully, softly, gently. delicate steps, music boxes, wind chimes.<br>
-　　i got used to avoid being seen when i open the windows at sunrise and close them at sunset. i take care of my plants and animals in the backyard, where they can't see me.<br>
-　　i got used to leaving home only if accompanied. unfortunately i am not invisible in the streets, but i try my best to be discreet, modest and polite. people in town doubt my existence, but they don't bother with me. there's nothing to worry about. just a well-mannered girl, maybe too busy, maybe just visiting.<br>
-　　it can be tiring, but it needs to be done. i've never been through any dangerous experience on the streets, because no one can hurt a ghost.
-<br><br>
-</font>
-
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
 
 
 
