--- a/faq.html
+++ b/faq.html
@@ -375,15 +375,15 @@ i like to use its name and variations as user in my "casual" accounts ! small an
 <b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ...<br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
-✂　my height is 5,5. average, i guess ?<br>
-✂　i weight 117 lbs. i think i'm skinny, but not super skinny, i'm okay.<br>
+✂　my height is 167cm ( 5'5 ft ). i am medium sized.<br>
+✂　i weight 54kg ( 117 lbs ). i'm okay, i think i'm skinny.<br>
 ✂　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
 ✂　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
 ✂　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
 ✂　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
 ✂　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
 ✂　i don't know my shoe size to be honest, but my feet are 24cm.<br>
-✂　um... i'm a-cup ;////;<br>
+✂　um... i'm a-cup ///<br>
 <br><br><br><br><br><br>
 </font>
 
@@ -1014,6 +1014,48 @@ p { margin: 0; }
 }());
 </script>
 
+　　　　　　　　<font color="#d3a5a5" style="font-size:11px;">♡</font> <a id="linkbjinho" data-target="spoiler02c" class="btn-spoiler02c">dorothy</a><br>
+
+<div id="spoiler02c" class="spoiler-area02c is-closed02c">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="400px" height="auto" src="https://i.imgur.com/Y3JKTZb.gif"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area02c {
+
+}
+.spoiler-area02c.is-closed02c { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler02c');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "dorothy" ){
+                this.innerHTML = "dorothy ˣ";
+                $spoiler.classList.remove("is-closed02c");
+            } else {
+                this.innerHTML = "dorothy";
+                $spoiler.classList.add("is-closed02c");
+            }
+        });
+
+    });
+
+}());
+</script>
+
 　　　　　　　　<font color="#d3a5a5" style="font-size:11px;">♡</font> <a id="linkbjinho" data-target="spoiler1c" class="btn-spoiler1c">marron cream</a><br>
 
 <div id="spoiler1c" class="spoiler-area1c is-closed1c">
@@ -1132,48 +1174,6 @@ p { margin: 0; }
             } else {
                 this.innerHTML = "ribbonsanka";
                 $spoiler.classList.add("is-closed7c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<font color="#d3a5a5" style="font-size:11px;">♡</font> <a id="linkbjinho" data-target="spoiler02c" class="btn-spoiler02c">natori sana</a><br>
-
-<div id="spoiler02c" class="spoiler-area02c is-closed02c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="300px" height="auto" src="https://i.imgur.com/btOaewH.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area02c {
-
-}
-.spoiler-area02c.is-closed02c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler02c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "natori sana" ){
-                this.innerHTML = "natori sana ˣ";
-                $spoiler.classList.remove("is-closed02c");
-            } else {
-                this.innerHTML = "natori sana";
-                $spoiler.classList.add("is-closed02c");
             }
         });
 
