--- a/links.html
+++ b/links.html
@@ -321,7 +321,7 @@ z-index: 3;
 <br>
 <a id="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
 <br>
-<a id="ooo" title="html test" href="https://honey.bearfacts.net" target="_blank" >honey.bearfacts.net</a>
+<a id="ooo" title="html test" href="https://teddy.home.kg" target="_blank" >teddy.home.kg</a>
 <br>
 <a id="ooo" title="offline ywot" href="https://rosy.latteart.fi" target="_blank" >rosy.latteart.fi</a>
 </div>
