--- a/faq.html
+++ b/faq.html
@@ -326,17 +326,17 @@ but please don't question me about supporting or not movements and communities, 
 <font color="#d8b9af">　( june . 15 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
-　｡ ･ * . ♡ 𝑚𝑒𝑙𝑖𝑠𝑠𝑎
+　<font color="#d8b9af">✐ ..</font> <font color="#91816b">𝑚𝑒𝑙𝑖𝑠𝑠𝑎</font>
 <br>
 melissa is my irl name. i really like my name, but i don't use it on the internet because it would be difficult to find me, you know. melissa is the name of a plant, the lemon balm. it is common for people to use this plant to make tea and for medicinal purposes. it has very small, white and delicate flowers. the meaning of this name is literally "honeybee", which makes people give some interesting interpretations to it. some people gave me the nickname "mel" ( which means literally honey ).
 <br>
 <br>
-　｡ ･ * . ♡ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡
+　<font color="#d8b9af">✐ ..</font> <font color="#91816b">𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡</font>
 <br>
 this is actually a surname, and i use it as "artistic signature". it's very formal, so i don't use it as user on the internet. i've used some variations of it ( mimi, midpot, mimipot ) in the past, though. it's not a real surname, i discovered it in a dream. at the time i was thinking of a nickname to use on the internet and i had just created the "poofties" project, so i was thinking about many things and characters, especially potatoes. i used the nickname "poteto" from time to time, because of that. one day i dreamed about potatoes and many other confusing things, including a very fat and giant cat that called me "melissa middlepot". he told me "you're bigger than your potato friends, but there are still bigger potatoes, believe me", even though i was not really a potato. i know it's weird, but the dream was in portuguese, except for the surname "middlepot", so it's a bit hard to explain LOL. well, i woke up really thinking that middlepot was good, it sounds like some english surnames. so, yes, i believe that "pot" is from "potato". be honest, "middlepot" is pretty cute, isn't it ?
 <br>
 <br>
-　｡ ･ * . ♡ 𝑝𝑢𝑓 / 𝑝𝑜𝑜𝑓𝑡𝑖𝑒
+　<font color="#d8b9af">✐ ..</font> <font color="#91816b">𝑝𝑢𝑓 / 𝑝𝑜𝑜𝑓𝑡𝑖𝑒</font>
 <br>
 puf is not just a nickname but actually a character from the poofti world, therefore, a pooftie. it's who i am, there ! middlepot is the surname that was given for me, but they don't call me like this, because it's too formal.. they neither call me melissa / mel ; they call me puf !<br>
 puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. it is often seen in the form of a teddy bear, bunny, lamb, or human girl ! sometimes a mix between these .. sometimes with wings, but it cannot fly. puf can't control its metamorphosis abilities, it happens suddenly and without explanation.<br>
@@ -349,41 +349,41 @@ i like to use its name and variations as user in my "casual" accounts ! small an
 <font color="#d8b9af">　( april . 19 . 2018 + may . 04 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
-　　　　　𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈 :<br>
+　　　　　<font color="#91816b">𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈</font> ..<br>
 <br>
-❀　i'm very shy & introverted. so, because of my introversion, i don't feel bad for being shy, it's just part of me ;<br>
-❀　i'm full of love and i do my best to take care of others and myself. i want to bring comfort and safety to everyone !<br>
-❀　i have difficulties in approaching and sometimes i never feel comfortable near some people ;<br>
-❀　when i'm comfortable with people, i talk a lot about random things, sometimes i even talk too much ///<br>
-❀　i usually adapt to different situations and different people "changing moods", sometimes i get into it a lot and i feel confused, but i'm always myself ;<br>
-❀　i'm always evaluating my behavior to improve myself, but sometimes i take it too seriously and get overwhelmed ;<br>
-❀　i love rules ! i love to make rules for myself, to have rules made for me and to follow them. rules often make me happy because they make me a better person ;<br>
-❀　i make lists all the time to be able to have an organized routine and take time to practice all my hobbies. feeling busy with things that i like makes me feel pretty satisfied !<br>
-❀　i think too much about everything and sometimes i feel melancholic ;<br>
-❀　i deeply value the purity. for me purity is directly linked to your true personality, who you really are. i never forget who i am and what i believed and wanted from myself when i was a child and i want more than anything to be proud of myself, the child i will always be.<br>
+<font color="#d8b9af">୨୧</font>　i'm very shy & introverted. so, because of my introversion, i don't feel bad for being shy, it's just part of me ;<br>
+<font color="#d8b9af">୨୧</font>　i'm full of love and i do my best to take care of others and myself. i want to bring comfort and safety to everyone !<br>
+<font color="#d8b9af">୨୧</font>　i have difficulties in approaching and sometimes i never feel comfortable near some people ;<br>
+<font color="#d8b9af">୨୧</font>　when i'm comfortable with people, i talk a lot about random things, sometimes i even talk too much <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
+<font color="#d8b9af">୨୧</font>　i usually adapt to different situations and different people "changing moods", sometimes i get into it a lot and i feel confused, but i'm always myself ;<br>
+<font color="#d8b9af">୨୧</font>　i'm always evaluating my behavior to improve myself, but sometimes i take it too seriously and get overwhelmed ;<br>
+<font color="#d8b9af">୨୧</font>　i love rules ! i love to make rules for myself, to have rules made for me and to follow them. rules often make me happy because they make me a better person ;<br>
+<font color="#d8b9af">୨୧</font>　i make lists all the time to be able to have an organized routine and take time to practice all my hobbies. feeling busy with things that i like makes me feel pretty satisfied !<br>
+<font color="#d8b9af">୨୧</font>　i think too much about everything and sometimes i feel melancholic ;<br>
+<font color="#d8b9af">୨୧</font>　i deeply value the purity. for me purity is directly linked to your true personality, who you really are. i never forget who i am and what i believed and wanted from myself when i was a child and i want more than anything to be proud of myself, the child i will always be.<br>
 <br>
-　　　　　𝓮𝓍𝓉𝓇𝒶 :<br>
+　　　　　<font color="#91816b">𝓮𝓍𝓉𝓇𝒶</font> ..<br>
 <br>
-❀　my sense of humor is quite childish, so i laugh at really silly things ;<br>
-❀　i cry a lot, sad and happy ;<br>
-❀　my main interest is beautiful things and to make things beautiful ;<br>
-❀　i like everything that warms my heart and i try to fill my life with these things ;<br>
-❀　people say i smell like vanilla. i think i smell like honey ///<br>
-❀　i love animals, especially babies, i love taking care of babies ♡ !!!<br>
-❀　i love nature, she is everything to me, i struggle daily to feel part of her and understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
+<font color="#d8b9af">୨୧</font>　my sense of humor is quite childish, so i laugh at really silly things ;<br>
+<font color="#d8b9af">୨୧</font>　i cry a lot, sad and happy ;<br>
+<font color="#d8b9af">୨୧</font>　my main interest is beautiful things and to make things beautiful ;<br>
+<font color="#d8b9af">୨୧</font>　i like everything that warms my heart and i try to fill my life with these things ;<br>
+<font color="#d8b9af">୨୧</font>　people say i smell like vanilla. i think i smell like honey <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
+<font color="#d8b9af">୨୧</font>　i love animals, especially babies, i love taking care of babies <font color="#d3a5a5" style="font-size:11px;">♡</font> !!<br>
+<font color="#d8b9af">୨୧</font>　i love nature, she is everything to me, i struggle daily to feel part of her and understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
 <br><br><br>
 <b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ...<br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
-✂　my height is 167cm ( 5'5 ft ). i am medium sized.<br>
-✂　i weight 54kg ( 117 lbs ). i'm okay, i think i'm skinny.<br>
-✂　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
-✂　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
-✂　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
-✂　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
-✂　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
-✂　i don't know my shoe size to be honest, but my feet are 24cm.<br>
-✂　um... i'm a-cup ///<br>
+<font color="#d8b9af">✂</font>　my height is 167cm ( 5'5 ft ). i am medium sized.<br>
+<font color="#d8b9af">✂</font>　i weight 54kg ( 117 lbs ). i'm okay, i think i'm skinny.<br>
+<font color="#d8b9af">✂</font>　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
+<font color="#d8b9af">✂</font>　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
+<font color="#d8b9af">✂</font>　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
+<font color="#d8b9af">✂</font>　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
+<font color="#d8b9af">✂</font>　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
+<font color="#d8b9af">✂</font>　i don't know my shoe size to be honest, but my feet are 24cm.<br>
+<font color="#d8b9af">✂</font>　um... i'm a-cup <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
 <br><br><br><br><br><br>
 </font>
 
