--- a/index.html
+++ b/index.html
@@ -29,7 +29,22 @@
 
 <link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="title" content="ഒ">
 <meta name="description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
+<meta name="theme-color" content="#faf0f3">
+<meta property="og:url" content="https://middlepot.com">
+<meta property="og:title" content="ഒ">
+<meta property="og:description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
+<meta property="og:image" content="https://i.imgur.com/Le8X8Xl.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://middlepot.com">
+<meta property="twitter:title" content="ഒ">
+<meta property="twitter:description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
+<meta property="twitter:image" content="https://i.imgur.com/Le8X8Xl.jpg">
+
+
 <style>
 body{ 
   cursor: url(https://i.imgur.com/C9RGjYt.png), progress;}
