--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
 <link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="title" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑠𝑎𝑓𝑒 𝑝𝑙𝑎𝑐𝑒 ഒ">
-<meta name="description" content=" . ♡   。・　゜ ♡   。・゜   ♡ 　 ゜・。 ♡ .">
+<meta name="title" content="  ">
+<meta name="description" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ഒ">
 <meta name="theme-color" content="#f7e9ed">
 <meta property="og:url" content="https://middlepot.com">
-<meta property="og:title" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑠𝑎𝑓𝑒 𝑝𝑙𝑎𝑐𝑒 ഒ">
-<meta property="og:description" content=" . ♡   。・　゜ ♡   。・゜   ♡ 　 ゜・。 ♡ .">
+<meta property="og:title" content="  ">
+<meta property="og:description" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ഒ">
 <meta property="og:image" content="https://middlepot.com/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://middlepot.com">
-<meta property="twitter:title" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑠𝑎𝑓𝑒 𝑝𝑙𝑎𝑐𝑒 ഒ">
-<meta property="twitter:description" content=" . ♡   。・　゜ ♡   。・゜   ♡ 　 ゜・。 ♡ .">
+<meta property="twitter:title" content="  ">
+<meta property="twitter:description" content="𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ഒ">
 <meta property="twitter:image" content="https://middlepot.com/pure.jpg">
 
 
