--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <meta property="og:url" content="https://middlepot.com">
 <meta property="og:title" content="ഒ">
 <meta property="og:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
-<meta property="og:image" content="https://middlepot.com/pure.jpg">
+<meta property="og:image" content="https://middlepot.com/img/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://middlepot.com">
 <meta property="twitter:title" content="ഒ">
 <meta property="twitter:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
-<meta property="twitter:image" content="https://middlepot.com/pure.jpg">
+<meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
 
 
 <style>
