--- a/stories.html
+++ b/stories.html
@@ -32,14 +32,14 @@
 <meta name="title" content="ഒ">
 <meta name="description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta name="theme-color" content="#f7e9ed">
-<meta property="og:url" content="https://middlepot.com/stories">
+<meta property="og:url" content="https://middlepot.com/i">
 <meta property="og:title" content="ഒ">
 <meta property="og:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta property="og:image" content="https://middlepot.com/img/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://middlepot.com/stories">
+<meta property="twitter:url" content="https://middlepot.com/i">
 <meta property="twitter:title" content="ഒ">
 <meta property="twitter:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
@@ -222,15 +222,20 @@ z-index: 3;
 
 <div id="stuff">
 
-<br><br><br>
-
+<br><br>
+<br>
 <center>
-<sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><font color="#a38e94" style="font-size:10px;">　poofties, through her eyes　</font><sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><br><br>
-<font color="#e8c8d2" style="font-size:10px;">( click the preview for watching )</font><br><br><br>
 
-<font color="#b89a9a" style="font-size:10px;">first episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">good morning</font><br><br>
-<a href="/i"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a></center><br>
+<video width="520" height="auto" controls>
+<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
+</video>
+
+<br><br><br>
+<font family = "Verdana"><font color="#80746D"><font size="1">music : <a href="https://files.catbox.moe/xcbdd6.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a></font></font></font>
+<br><br>
 </center>
+
+　　　<a href="/stories" id="linkbjinho" style="text-decoration: none; color:#e8c8d2;">← back</a>
 
 <br><br><br>
 </div>
