--- a/softdesserts.html
+++ b/softdesserts.html
@@ -29,7 +29,21 @@
 
 <link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
+<meta name="title" content="ഒ">
+<meta name="description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
+<meta name="theme-color" content="#f7e9ed">
+<meta property="og:url" content="https://middlepot.com/softdesserts">
+<meta property="og:title" content="ഒ">
+<meta property="og:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
+<meta property="og:image" content="https://middlepot.com/img/pure.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://middlepot.com/softdesserts">
+<meta property="twitter:title" content="ഒ">
+<meta property="twitter:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
+<meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
+
 <style>
 body{ 
   cursor: url(https://i.imgur.com/C9RGjYt.png), progress;}
@@ -127,7 +141,7 @@ overflow-x:hidden;
 #menu1 {
 position: absolute;
 	left: %;
-	top: 26%;
+	top: 28%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -190,7 +204,7 @@ z-index: 3;
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
 </p>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 　　　　　　<a href="/poofties" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
