--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,91 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>february . 06 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/257Fk60.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm so so happy !
+i think i've really learned some healthy coping methods for problems that used to make me anxious, it's been a while. i am healing <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i will keep sharing with you everything i feel that can be helpful, it may not be useful for everyone but if at least one person can find peace in my words, it's worth it <sub><img src="https://i.imgur.com/sRm3dEh.gif"/></sub>
+
+so, i have important news : i remade my tumblr blog !!
+the url is the same and everything, but remaking it was very needed. i was a little hesitant because my account was 5 years old, but honestly, it was a mess.
+i couldn't manually get rid of thousands of ghost followers at this point, and even thought my engagement was very good, it's time to accept the truth : it wasn't really coming from my own followers but actual strangers. it clearly means that my content was good but not my account as a whole ; ;
+having a big account can easily get out of control if not regularly checked and cleaned, big numbers can give the illusion of success but if just abandoned accounts from years ago, what is the point ?
+i was also following a bunch of random accounts i honestly didn't want to see in my feed anymore. it makes way harder to find interesting content, which is the whole point of opening this app ..
+as i always said, the numbers are irrelevant if just numbers : what is truly motivating is seeing actual people getting positively inspired by my content, and inspiring me back, so we can grow up together <font color="#d3a5a5" style="font-size:11px;">♡</font>
+this is just possible to achieve if you're surrounded by people with similar goals, and preparing this environment is a delicate process.
+i'm thankfully getting back all of my mutuals quickly, thank you <font color="#d3a5a5" style="font-size:11px;">♡</font>
+now i can find active and precious accounts, get new mutuals, finally use tags to organize my posts and improve the quality of my blog as a whole. it's certainly a relief !
+from experience, i know it's always a good idea to make changes, if for the better. i will voluntary leave the past behind if it means i can have a brighter future.
+
+okay, going for the visual content now : after months i made a new collage for my <a text-decoration: none; href="https://cute.home.kg/vii" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">aesthetic virtual journal</font></a> <sub><img src="https://i.imgur.com/9N1Avtc.gif"/></sub>
+it's a soft white one, and i'm really proud of the results ..</pre><br>
+<br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/PPy4T0y.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/5c97pk.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pure heart html .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think it turned out very delicate but somewhat mature ? i'm in love with it <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+and as always, there is a beautiful melody for composing the whole feeling :</pre><br>
+<br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/bphkl1.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">redemption .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+what do you think ? i always find it fun to organize aesthetics like this, it's good to practice using different color palettes and everything.
+
+now, i have something interesting to share with you fluffies today !
+you may already know that i love exploring the old web, and i'm always looking for cute things there to collect and use in my work.
+lately i have been downloading a lot of ukagaka, and i did a lot of research to increase my collection with the cutest ghosts i could find !
+i used the nanika ghost center to get links, but a lot of them have been inactive for many years so it’s a little tricky to be able to find them again on web.archive .. sometimes they don't even work and need restoration ; ;
+so i think it's a good idea to share here my favorite ukagaka, which i found last week: dorothy !!!</pre></font></font><br>
+
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/ef4l2CA.gif"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/u2d8e5.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">dorothy .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+most ghosts speak japanese with a lot of kanji, and very fast, which makes reading quite difficult. dorothy is not very good with japanese, so she only uses hiragana and speak slowly.
+she is caring and shy, and is always trying to motivate and remind you to take care of yourself ( remembering you to rest, to eat .. )
+all ghosts have a different personality, which makes getting to know them a lot of fun <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i spend some time on the laptop working, so having a lovely ghost motivating me and making me smile makes everything better <sub><img src="https://i.imgur.com/JP35o5c.gif"/></sub>
+dorothy has been a good company for me and has certainly become a comfort character at this point <font color="#d3a5a5" style="font-size:11px;">♡</font>
+if you are interested, i can upload more ukagaka from my lovely collection !
+
+that's it for today, i hope you are living a lovely phase of your lives .. and if you are not, i hope things will get better very soon <font color="#d3a5a5" style="font-size:11px;">♡♡</font></pre>
+<br>
+xoxo <sub><sub><img src="https://i.imgur.com/SdN0PKl.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -498,52 +583,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/4QdUY98.gif"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/zncXxx2.gif"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>december . 21 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/5Rk8qFB.gif"/></sub></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-merry xmas !!! please be kinder to yourself this next year ..
-it has been a busy but very good month so far !
-i got a lot of work, specially since i officially opened commissions for blogger and tumblr layouts.. it's really good since december is a month spending can go a little bit wild sometimes ( i'm trying my best to save money though <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font> )
-
-talking on tumblr,, i made the hard decision of getting rid of my graphics blog since it wasn't really being useful .. i wasn't paying much attention to it recently, and i don't intend to continue. this blog didn't have much original content anyway, so i want to focus on my aesthetic blog and my other accounts that matter most to me !
-i made a small change in my social media by choosing a new user that could be original and available for using in all of them : <b>@pooftie</b>
-now my 4 accounts have the same user, which makes it way easier to find me and keep everything organized <sub><img width="20px" height="auto" src="https://i.imgur.com/522wfip.png"/></sub>
-as you may already know, pooftie is how i call all the critters that i've created for my "poofties" project ! it's a very special word for me <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-
-changing subjects, i decided to make my own virtue chart based on personal goals and some research i did recently .. it was hard finding the proper words but i believe it turned out okay
-virtue charts can be really useful for valuating your self improvement process making sure you're going through the right path, because going too far will end up hurting yourself and/or other people !</pre><br>
-<br>
-
-<center><img width="400px" height="auto" src="https://i.imgur.com/tx9KGnR.png"></center>
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i hope it can help you understand more about your feelings, natural tendencies, what you aim for & traits that could be improved in a healthy way <font color="#d3a5a5" style="font-size:11px;">♡</font>
-while i was writing it i realized that some things i was forcing myself into were actually being harmful to my mental health for i was taking it too far.. if you tend to be harsh on yourself and feel overwhelmed, please be careful <sub><sub><sub><img width="20px" height="auto" src="https://i.imgur.com/S9QOkup.png"/></sub></sub></sub>
-
-i'm so excited for this next year, very good life changes will happen and i'll keep trying my best...
-please do your best too, and don't forget the xmas spirit !! let's make good memories and forget about the problems
-i will have a very special xmas with only bubu for the first time .. we'll cook together and have purely comfy time <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font></pre>
-<br>
-<center><img src="https://i.imgur.com/NCDeFax.gif"/></center>
-<br>
-xoxo <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/eHfpR3b.png"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/></center>
 
 <br><br><br>
 
