--- a/gaming.html
+++ b/gaming.html
@@ -933,6 +933,115 @@ p { margin: 0; }
 
 <br><br><br><br>
 
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>adorable home</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler1021" class="btn-spoiler1021">my home</a>
+
+
+<center>
+
+<div id="spoiler1021" class="spoiler-area is-closed1021">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img width="350px" height="auto" src="https://i.imgur.com/OKfeLKI.jpg"/><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/Gfj0Mfo.jpg"/>
+
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area1021 {
+
+}
+.spoiler-area.is-closed1021 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler1021');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "my home" ){
+                this.innerHTML = "my home ˣ";
+                $spoiler.classList.remove("is-closed1021");
+            } else {
+                this.innerHTML = "my home";
+                $spoiler.classList.add("is-closed1021");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
+
+<br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>rilakkuma farm</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler1022" class="btn-spoiler1022">my farm</a>
+
+
+<center>
+
+<div id="spoiler1022" class="spoiler-area is-closed1022">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img width="320px" height="auto" src="https://i.imgur.com/xjSypP7.jpg"/>
+
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area1022 {
+
+}
+.spoiler-area.is-closed1022 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler1022');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "my farm" ){
+                this.innerHTML = "my farm ˣ";
+                $spoiler.classList.remove("is-closed1022");
+            } else {
+                this.innerHTML = "my farm";
+                $spoiler.classList.add("is-closed1022");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
+
+<br><br><br>
+
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>カスタムキャスト</b>　<font style="font-size:9px">♡</font></font><br><br>
