--- a/archive.html
+++ b/archive.html
@@ -322,6 +322,55 @@ font-family: Verdana;">
 
 <br>
 
+
+<center><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>december . 21 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/5Rk8qFB.gif"/></sub></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+merry xmas !!! please be kinder to yourself this next year ..
+it has been a busy but very good month so far !
+i got a lot of work, specially since i officially opened commissions for blogger and tumblr layouts.. it's really good since december is a month spending can go a little bit wild sometimes ( i'm trying my best to save money though <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font> )
+
+talking on tumblr,, i made the hard decision of getting rid of my graphics blog since it wasn't really being useful .. i wasn't paying much attention to it recently, and i don't intend to continue. this blog didn't have much original content anyway, so i want to focus on my aesthetic blog and my other accounts that matter most to me !
+i made a small change in my social media by choosing a new user that could be original and available for using in all of them : <b>@pooftie</b>
+now my 4 accounts have the same user, which makes it way easier to find me and keep everything organized <sub><img width="20px" height="auto" src="https://i.imgur.com/522wfip.png"/></sub>
+as you may already know, pooftie is how i call all the critters that i've created for my "poofties" project ! it's a very special word for me <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+changing subjects, i decided to make my own virtue chart based on personal goals and some research i did recently .. it was hard finding the proper words but i believe it turned out okay
+virtue charts can be really useful for valuating your self improvement process making sure you're going through the right path, because going too far will end up hurting yourself and/or other people !</pre><br>
+<br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/tx9KGnR.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i hope it can help you understand more about your feelings, natural tendencies, what you aim for & traits that could be improved in a healthy way <font color="#d3a5a5" style="font-size:11px;">♡</font>
+while i was writing it i realized that some things i was forcing myself into were actually being harmful to my mental health for i was taking it too far.. if you tend to be harsh on yourself and feel overwhelmed, please be careful <sub><sub><sub><img width="20px" height="auto" src="https://i.imgur.com/S9QOkup.png"/></sub></sub></sub>
+
+i'm so excited for this next year, very good life changes will happen and i'll keep trying my best...
+please do your best too, and don't forget the xmas spirit !! let's make good memories and forget about the problems
+i will have a very special xmas with only bubu for the first time .. we'll cook together and have purely comfy time <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font></pre>
+<br>
+<center><img src="https://i.imgur.com/NCDeFax.gif"/></center>
+<br>
+xoxo <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/eHfpR3b.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/><img src="https://i.imgur.com/6ZfuR16.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img width="330" height="auto" src="https://i.imgur.com/voTDmbX.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
